2008-12-30  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/MultiplePiePlot.java
    (legendItemShape): New field,
    (MultiplePiePlot(CategoryDataset)): Initialise new field,
    (getLegendItemShape): New method,
    (setLegendItemShape): New method,
    (getLegendItems): Use new field,
    (equals): Check new field,
    (clone): Implemented,
    (readObject): Handle new field,
    (writeObject): Likewise.

2008-12-20  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2452078:
    * source/org/jfree/chart/ChartFactory.java
    (createStackedAreaChart): Set category margin to zero.

2008-12-18  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1607918 by Jess Thrysoee (with modifications):
    * source/org/jfree/chart/ChartPanel.java
    (localizationResources): Use ResourceBundleWrapper,
    * source/org/jfree/chart/JFreeChart.java
    (JFreeChartInfo()): Likewise,
    * source/org/jfree/chart/editor/DefaultAxisEditor.java,
    * source/org/jfree/chart/editor/DefaultChartEditor.java,
    * source/org/jfree/chart/editor/DefaultColorBarEditor.java,
    * source/org/jfree/chart/editor/DefaultNumberAxisEditor.java,
    * source/org/jfree/chart/editor/DefaultPlotEditor.java,
    * source/org/jfree/chart/editor/DefaultTitleEditor.java
    (localizationResources): Use ResourceBundleWrapper,
    * source/org/jfree/chart/plot/CategoryPlot.java,
    * source/org/jfree/chart/plot/ContourPlot.java,
    * source/org/jfree/chart/plot/FastScatterPlot.java,
    * source/org/jfree/chart/plot/MeterPlot.java,
    * source/org/jfree/chart/plot/PiePlot.java,
    * source/org/jfree/chart/plot/PolarPlot.java,
    * source/org/jfree/chart/plot/ThermometerPlot.java,
    * source/org/jfree/chart/plot/WaferMapPlot.java,
    * source/org/jfree/chart/plot/XYPlot.java
    (localizationResources): Use ResourceBundleWrapper,
    * source/org/jfree/chart/util/ResourceBundleWrapper.java: New class,